--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -8,60 +8,68 @@
         class="row row-cols-xl-5 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-sx-1"
       >
         {% for job in jobs %}
-        <div
-          id="job-{{ job.id }}"
-          class="col-1 border border-secondary p-0"
-          style="border-radius: 10%"
-        >
-          <script>
-            document
-              .getElementById("job-{{ job.id }}")
-              .addEventListener("click", function () {
-                window.location.href =
-                  "{{ url_for('views.job.job', id=job.id) }}";
-              });
-          </script>
-          <table class="table table-striped table-no-border m-0">
-            <thead>
-              <tr>
-                <th colspan="2" class="text-center" style="border-top: none">
-                  {{ job.name }}
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th>Arbeitgeber</th>
-                <th class="d-inline-flex">
-                  <img
-                    src="{{ url_for('views.profile.profile_image', user_id=job.employer.id) }}"
-                    alt="Profilbild"
-                    class="hover-overlay rounded-circle"
-                    style="width: 3vh; height: 3vh"
-                    data-mdb-ripple-color="light"
-                  />
-                  <p class="mb-0 ml-2">
-                    {{ job.employer.first_name }} {{ job.employer.last_name }}
-                  </p>
-                </th>
-              </tr>
-              <tr>
-                <th>Dauer</th>
-                <th>{{ job.duration // 60 }}:{{ job.duration % 60}}</th>
-              </tr>
-              <tr>
-                <th>Bezahlung</th>
-                <th>{{ job.payment // 100 }},{{ job.payment % 100 }}€</th>
-              </tr>
-              <tr>
-                <th>Start Zeit</th>
-                <th>
-                  {{ datetime.fromtimestamp(job.time_start).strftime("%H:%M
-                  %d.%m.%Y") }}
-                </th>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col p-2">
+          <div
+            id="job-{{ job.id }}"
+            class="border border-secondary p-0 h-100 w-100"
+            style="border-radius: 10%"
+          >
+            <script>
+              document
+                .getElementById("job-{{ job.id }}")
+                .addEventListener("click", function () {
+                  window.location.href =
+                    "{{ url_for('views.job.job', id=job.id) }}";
+                });
+            </script>
+            <table class="table table-striped table-no-border m-0">
+              <thead>
+                <tr>
+                  <th colspan="2" class="text-center" style="border-top: none">
+                    {{ job.name }}
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>Arbeitgeber</th>
+                  <th class="d-flex flex-row">
+                    <img
+                      src="{{ url_for('views.profile.profile_image', user_id=job.employer.id) }}"
+                      alt="Profilbild"
+                      class="hover-overlay rounded-circle"
+                      style="width: 3vh; height: 3vh"
+                      data-mdb-ripple-color="light"
+                    />
+                    <p class="mb-0 ml-2">
+                      {{ job.employer.first_name }} {{ job.employer.last_name }}
+                    </p>
+                  </th>
+                </tr>
+                <tr>
+                  <th>Dauer</th>
+                  <th>
+                    {{ job.duration // 60 }}:{{ str(job.duration % 60).rjust(2,
+                    "0")}}
+                  </th>
+                </tr>
+                <tr>
+                  <th>Bezahlung</th>
+                  <th>
+                    {{ job.payment // 100 }},{{ str(job.payment % 100).rjust(2,
+                    "0") }}€
+                  </th>
+                </tr>
+                <tr>
+                  <th>Start Zeit</th>
+                  <th>
+                    {{ datetime.fromtimestamp(job.time_start).strftime("%H:%M
+                    %d.%m.%Y") }}
+                  </th>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
         {% endfor %}
       </div>
