--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -37,11 +37,11 @@
                     <img
                       src="{{ url_for('views.profile.profile_image', user_id=job.employer.id) }}"
                       alt="Profilbild"
-                      class="hover-overlay rounded-circle"
+                      class="hover-overlay rounded-circle mr-2"
                       style="width: 3vh; height: 3vh"
                       data-mdb-ripple-color="light"
                     />
-                    <p class="mb-0 ml-2">
+                    <p class="m-0">
                       {{ job.employer.first_name }} {{ job.employer.last_name }}
                     </p>
                   </th>
