--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -35,7 +35,7 @@
                   <th>Arbeitgeber</th>
                   <th class="d-flex flex-row">
                     <img
-                      src="{{ url_for('views.profile.profile_image', user_id=job.employer.id) }}"
+                      src="{{ url_for('views.base.profile_image', user_id=job.employer.id) }}"
                       alt="Profilbild"
                       class="hover-overlay rounded-circle mr-2"
                       style="width: 3vh; height: 3vh"
