--- a/flask/website/templates/job.html
+++ b/flask/website/templates/job.html
@@ -25,7 +25,7 @@
             <th>
               <div class="d-inline-flex">
                 <img
-                  src="{{ url_for('views.profile.profile_image', user_id=job.employer.id) }}"
+                  src="{{ url_for('views.base.profile_image', user_id=job.employer.id) }}"
                   alt="Profilbild"
                   class="hover-overlay rounded-circle"
                   style="width: 3vh; height: 3vh"
