--- a/flask/website/templates/profile.html
+++ b/flask/website/templates/profile.html
@@ -9,7 +9,7 @@
     <div class="row w-100 m-0">
       <div class="col-3 p-0 mr-3 border border-secondary rounded h-100">
         <img
-          src="{{ url_for('views.profile.profile_image') }}"
+          src="{{ url_for('views.base.profile_image') }}"
           alt="Kein Profilbild gefunden!"
           class="mw-100 mh-100 rounded"
         />
