--- a/flask/website/templates/view_profile.html
+++ b/flask/website/templates/view_profile.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-4">
       <img
-        src="{{ url_for('views.profile.profile_image', user_id=profile.id) }}"
+        src="{{ url_for('views.base.profile_image', user_id=profile.id) }}"
         alt="Profilbild"
         class="w-100"
       />
