impoved base template

--- a/flask/website/templates/create_job.html
+++ b/flask/website/templates/create_job.html
@@ -7,7 +7,7 @@ block content %}
     <div class="form-group">
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text">Name</span>
+          <span class="input-group-text">Tätigkeit</span>
         </div>
         <input
           type="text"
@@ -146,3 +146,5 @@ block content %}
   </form>
 </div>
 {% endblock %}
+<!-- TODO: add jobs that are weekly or so 
+TODO: add description of job -->
