--- a/flask/website/templates/login.html
+++ b/flask/website/templates/login.html
@@ -33,5 +33,6 @@
     </div>
     <button type="submit" class="btn btn-primary">Einloggen</button>
   </form>
+  <!-- TODO: add register button here -->
 </div>
 {% endblock %}
