--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100 w-100">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,7 +16,7 @@
     />
     <title>{% block title %}Home{% endblock %}</title>
   </head>
-  <body>
+  <body class="h-75 w-100">
     <script>
       function create_msg(msg, div, send) {
         let div_outer = document.createElement("div");
