--- a/flask/website/templates/login.html
+++ b/flask/website/templates/login.html
@@ -1,19 +1,32 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
-<div class="d-flex align-itmes-center justify-content-end h-100 container">
+<img
+  src="static\images\web\login_background_top.jpeg"
+  class="position-absolute"
+  style="height: 40vw; width: 40vw; z-index: -1"
+/>
+<img
+  src="static\images\web\login_background_bottom.jpeg"
+  class="position-absolute fixed-bottom fixed-right"
+  style="right: 0; left: auto; height: 40vw; width: 40vw; z-index: -1"
+/>
+<div
+  class="d-flex justify-content-center align-items-center container m-auto mt-lg-5 mt-md-3 mt-sm-1 h-75"
+>
   <form method="post" class="w-75">
     <h3 class="text-center">Login</h3>
     <!-- Email -->
     <div class="form-group">
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text">Email</span>
+          <span class="input-group-text" style="font-size: larger">Email</span>
         </div>
         <input
           type="email"
           class="form-control"
           name="email"
           placeholder="Enter email"
+          style="font-size: larger"
         />
       </div>
     </div>
@@ -21,21 +34,28 @@
     <div class="form-group">
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text">Passwort</span>
+          <span class="input-group-text" style="font-size: larger"
+            >Passwort</span
+          >
         </div>
         <input
           type="password"
           class="form-control"
           name="password"
           placeholder="Passwort"
+          style="font-size: larger"
         />
       </div>
     </div>
-    <button type="submit" class="btn btn-primary">Einloggen</button>
+    <button type="submit" class="btn btn-primary" style="font-size: larger">
+      Einloggen
+    </button>
     <button
       type="button"
       class="btn btn-primary"
-      onclick="window.location.href = "{{url_for('auth.sign_up')}}"
+      style="font-size: larger"
+      onclick="window.location.href
+      ='{{url_for('auth.sign_up')}}'"
     >
       Noch nicht Registriert?
     </button>
