--- a/flask/website/templates/settings.html
+++ b/flask/website/templates/settings.html
@@ -1,2 +1,15 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-%} {% endblock%}
+%}
+<div
+  class="d-flex flex-column justify-content-center container m-auto mt-lg-5 mt-md-3 mt-sm-1 p-0"
+>
+  <div class="input-group mb-3 justify-content-center">
+    <span class="input-group-text w-75">Dark Mode</span>
+    <div class="input-group-append">
+      <div class="input-group-text">
+        <input type="checkbox" aria-label="Checkbox for following text input" />
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock%}
