improved login page style

--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -16,7 +16,7 @@
     />
     <title>{% block title %}Home{% endblock %}</title>
   </head>
-  <body class="h-75 w-100">
+  <body class="h-75 w-100" style="background-color: rgb(207, 207, 207)">
     <script>
       function create_msg(msg, div, send) {
         let div_outer = document.createElement("div");
