--- a/flask/website/templates/login.html
+++ b/flask/website/templates/login.html
@@ -13,7 +13,15 @@
 <div
   class="d-flex justify-content-center align-items-center container m-auto mt-lg-5 mt-md-3 mt-sm-1 h-75"
 >
-  <form method="post" class="w-75">
+  <form
+    method="post"
+    class="w-75 border border-primary rounded"
+    style="
+      border-width: 0.25vw !important;
+      background-color: rgb(225, 225, 225);
+      padding: 2vw 5vw;
+    "
+  >
     <h3 class="text-center">Login</h3>
     <!-- Email -->
     <div class="form-group">
@@ -47,12 +55,16 @@
         />
       </div>
     </div>
-    <button type="submit" class="btn btn-primary" style="font-size: larger">
+    <button
+      type="submit"
+      class="btn btn-primary mb-3"
+      style="font-size: larger"
+    >
       Einloggen
     </button>
     <button
       type="button"
-      class="btn btn-primary"
+      class="btn btn-primary mb-3"
       style="font-size: larger"
       onclick="window.location.href
       ='{{url_for('auth.sign_up')}}'"
