--- a/flask/website/templates/login.html
+++ b/flask/website/templates/login.html
@@ -11,11 +11,16 @@
   style="right: 0; left: auto; height: 40vw; width: 40vw; z-index: -1"
 />
 <div
-  class="d-flex justify-content-center align-items-center container m-auto mt-lg-5 mt-md-3 mt-sm-1 h-75"
+  style="
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  "
 >
   <form
     method="post"
-    class="w-75 border border-primary rounded"
+    class="border border-primary rounded"
     style="
       border-width: 0.25vw !important;
       background-color: rgb(225, 225, 225);
